ParCPP.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.11 from ParCpp.y
-----------------------------------------------------------------------------

state 35 contains 1 shift/reduce conflicts.
state 153 contains 1 shift/reduce conflicts and 2 reduce/reduce conflicts.
state 183 contains 1 shift/reduce conflicts.
state 207 contains 2 shift/reduce conflicts.
state 261 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	%start_pDef -> Def                                 (1)
	%start_pListDef -> ListDef                         (2)
	%start_pArg -> Arg                                 (3)
	%start_pListArg -> ListArg                         (4)
	%start_pStm -> Stm                                 (5)
	%start_pListStm -> ListStm                         (6)
	%start_pDeclaration -> Declaration                 (7)
	%start_pContd -> Contd                             (8)
	%start_pExp1 -> Exp1                               (9)
	%start_pExp2 -> Exp2                               (10)
	%start_pExp3 -> Exp3                               (11)
	%start_pExp4 -> Exp4                               (12)
	%start_pExp8 -> Exp8                               (13)
	%start_pExp9 -> Exp9                               (14)
	%start_pExp10 -> Exp10                             (15)
	%start_pExp11 -> Exp11                             (16)
	%start_pExp12 -> Exp12                             (17)
	%start_pExp13 -> Exp13                             (18)
	%start_pExp14 -> Exp14                             (19)
	%start_pExp15 -> Exp15                             (20)
	%start_pExp -> Exp                                 (21)
	%start_pExp5 -> Exp5                               (22)
	%start_pExp6 -> Exp6                               (23)
	%start_pExp7 -> Exp7                               (24)
	%start_pListExp -> ListExp                         (25)
	%start_pQConst -> QConst                           (26)
	%start_pElmt -> Elmt                               (27)
	%start_pType -> Type                               (28)
	%start_pListId -> ListId                           (29)
	%start_pListType -> ListType                       (30)
	%start_pListString -> ListString                   (31)
	%start_pListElmt -> ListElmt                       (32)
	Char -> L_charac                                   (33)
	Integer -> L_integ                                 (34)
	Double -> L_doubl                                  (35)
	String -> L_quoted                                 (36)
	Id -> L_Id                                         (37)
	Program -> ListDef                                 (38)
	Def -> Type Id '(' ListArg ')' '{' ListStm '}'     (39)
	Def -> Type Id '(' ListArg ')' ';'                 (40)
	Def -> 'using' QConst ';'                          (41)
	Def -> 'typedef' Type Id ';'                       (42)
	Def -> 'typedef' Type '<' ListType '>' Id          (43)
	Def -> Type ListId ';'                             (44)
	ListDef ->                                         (45)
	ListDef -> ListDef Def                             (46)
	Arg -> Type Id                                     (47)
	Arg -> Type                                        (48)
	Arg -> 'const' Type Id                             (49)
	Arg -> 'const' Type                                (50)
	ListArg ->                                         (51)
	ListArg -> Arg                                     (52)
	ListArg -> Arg ',' ListArg                         (53)
	Stm -> Exp ';'                                     (54)
	Stm -> Declaration ';'                             (55)
	Stm -> Declaration '=' Exp ';'                     (56)
	Stm -> 'return' Exp ';'                            (57)
	Stm -> 'return' ';'                                (58)
	Stm -> 'while' '(' Exp ')' Stm                     (59)
	Stm -> '{' ListStm '}'                             (60)
	Stm -> 'if' '(' Exp ')' Stm Contd                  (61)
	Stm -> 'do' Stm 'while' '(' Exp ')' ';'            (62)
	Stm -> 'for' '(' Stm Exp ';' Exp ')' Stm           (63)
	Stm -> 'typedef' Type Id ';'                       (64)
	ListStm ->                                         (65)
	ListStm -> ListStm Stm                             (66)
	Declaration -> Type ListId                         (67)
	Declaration -> 'const' Type Id                     (68)
	Contd -> 'else' Stm                                (69)
	Contd ->                                           (70)
	Exp1 -> Exp '?' Exp2 ':' Exp2                      (71)
	Exp1 -> Exp2                                       (72)
	Exp2 -> 'throw' Exp                                (73)
	Exp2 -> Exp3 '+=' Exp2                             (74)
	Exp2 -> Exp3 '-=' Exp2                             (75)
	Exp2 -> Exp3 '=' Exp2                              (76)
	Exp2 -> Exp3                                       (77)
	Exp3 -> Exp3 '||' Exp4                             (78)
	Exp3 -> Exp4                                       (79)
	Exp4 -> Exp4 '&&' Exp5                             (80)
	Exp4 -> Exp5                                       (81)
	Exp8 -> Exp8 '!=' Exp9                             (82)
	Exp8 -> Exp8 '==' Exp9                             (83)
	Exp8 -> Exp9                                       (84)
	Exp9 -> Exp9 '>=' Exp10                            (85)
	Exp9 -> Exp9 '<=' Exp10                            (86)
	Exp9 -> Exp9 '>' Exp10                             (87)
	Exp9 -> Exp9 '<' Exp10                             (88)
	Exp9 -> Exp10                                      (89)
	Exp10 -> Exp10 '>>' Exp11                          (90)
	Exp10 -> Exp10 '<<' Exp11                          (91)
	Exp10 -> Exp11                                     (92)
	Exp11 -> Exp11 '-' Exp12                           (93)
	Exp11 -> Exp11 '+' Exp12                           (94)
	Exp11 -> Exp12                                     (95)
	Exp12 -> Exp13 '%' Exp12                           (96)
	Exp12 -> Exp12 '/' Exp13                           (97)
	Exp12 -> Exp12 '*' Exp13                           (98)
	Exp12 -> Exp13                                     (99)
	Exp13 -> '*' Exp13                                 (100)
	Exp13 -> '!' Exp13                                 (101)
	Exp13 -> '-' Exp13                                 (102)
	Exp13 -> '--' Exp13                                (103)
	Exp13 -> '++' Exp13                                (104)
	Exp13 -> Exp14                                     (105)
	Exp14 -> Exp14 '->' Exp15                          (106)
	Exp14 -> Exp14 '.' Exp15                           (107)
	Exp14 -> Exp14 '[' Exp ']'                         (108)
	Exp14 -> Exp14 '(' ListExp ')'                     (109)
	Exp14 -> Exp14 '--'                                (110)
	Exp14 -> Exp14 '++'                                (111)
	Exp14 -> Exp15                                     (112)
	Exp15 -> QConst                                    (113)
	Exp15 -> 'true'                                    (114)
	Exp15 -> 'false'                                   (115)
	Exp15 -> ListString                                (116)
	Exp15 -> Char                                      (117)
	Exp15 -> Integer                                   (118)
	Exp15 -> Double                                    (119)
	Exp15 -> Type Type                                 (120)
	Exp15 -> '(' Exp ')'                               (121)
	Exp -> Exp1                                        (122)
	Exp5 -> Exp6                                       (123)
	Exp6 -> Exp7                                       (124)
	Exp7 -> Exp8                                       (125)
	ListExp ->                                         (126)
	ListExp -> Exp                                     (127)
	ListExp -> Exp ',' ListExp                         (128)
	QConst -> ListElmt                                 (129)
	Elmt -> Id                                         (130)
	Elmt -> Id '<' ListType '>'                        (131)
	Type -> 'int'                                      (132)
	Type -> 'char'                                     (133)
	Type -> 'bool'                                     (134)
	Type -> 'void'                                     (135)
	Type -> 'double'                                   (136)
	Type -> QConst                                     (137)
	Type -> Type '&'                                   (138)
	ListId -> Id                                       (139)
	ListId -> Id ',' ListId                            (140)
	ListType -> Type                                   (141)
	ListType -> Type ',' ListType                      (142)
	ListString -> String                               (143)
	ListString -> String ListString                    (144)
	ListElmt -> Elmt                                   (145)
	ListElmt -> Elmt '::' ListElmt                     (146)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	'+='           { PT _ (TS _ 11) }
	','            { PT _ (TS _ 12) }
	'-'            { PT _ (TS _ 13) }
	'--'           { PT _ (TS _ 14) }
	'-='           { PT _ (TS _ 15) }
	'->'           { PT _ (TS _ 16) }
	'.'            { PT _ (TS _ 17) }
	'/'            { PT _ (TS _ 18) }
	':'            { PT _ (TS _ 19) }
	'::'           { PT _ (TS _ 20) }
	';'            { PT _ (TS _ 21) }
	'<'            { PT _ (TS _ 22) }
	'<<'           { PT _ (TS _ 23) }
	'<='           { PT _ (TS _ 24) }
	'='            { PT _ (TS _ 25) }
	'=='           { PT _ (TS _ 26) }
	'>'            { PT _ (TS _ 27) }
	'>='           { PT _ (TS _ 28) }
	'>>'           { PT _ (TS _ 29) }
	'?'            { PT _ (TS _ 30) }
	'['            { PT _ (TS _ 31) }
	']'            { PT _ (TS _ 32) }
	'bool'         { PT _ (TS _ 33) }
	'char'         { PT _ (TS _ 34) }
	'const'        { PT _ (TS _ 35) }
	'do'           { PT _ (TS _ 36) }
	'double'       { PT _ (TS _ 37) }
	'else'         { PT _ (TS _ 38) }
	'false'        { PT _ (TS _ 39) }
	'for'          { PT _ (TS _ 40) }
	'if'           { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'return'       { PT _ (TS _ 43) }
	'throw'        { PT _ (TS _ 44) }
	'true'         { PT _ (TS _ 45) }
	'typedef'      { PT _ (TS _ 46) }
	'using'        { PT _ (TS _ 47) }
	'void'         { PT _ (TS _ 48) }
	'while'        { PT _ (TS _ 49) }
	'{'            { PT _ (TS _ 50) }
	'||'           { PT _ (TS _ 51) }
	'}'            { PT _ (TS _ 52) }
	L_charac       { PT _ (TC $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }
	L_Id           { PT _ (T_Id $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	%start_pDef     rule  1
	%start_pListDef rule  2
	%start_pArg     rule  3
	%start_pListArg rule  4
	%start_pStm     rule  5
	%start_pListStm rule  6
	%start_pDeclaration rule  7
	%start_pContd   rule  8
	%start_pExp1    rule  9
	%start_pExp2    rule  10
	%start_pExp3    rule  11
	%start_pExp4    rule  12
	%start_pExp8    rule  13
	%start_pExp9    rule  14
	%start_pExp10   rule  15
	%start_pExp11   rule  16
	%start_pExp12   rule  17
	%start_pExp13   rule  18
	%start_pExp14   rule  19
	%start_pExp15   rule  20
	%start_pExp     rule  21
	%start_pExp5    rule  22
	%start_pExp6    rule  23
	%start_pExp7    rule  24
	%start_pListExp rule  25
	%start_pQConst  rule  26
	%start_pElmt    rule  27
	%start_pType    rule  28
	%start_pListId  rule  29
	%start_pListType rule  30
	%start_pListString rule  31
	%start_pListElmt rule  32
	Char            rule  33
	Integer         rule  34
	Double          rule  35
	String          rule  36
	Id              rule  37
	Program         rule  38
	Def             rules 39, 40, 41, 42, 43, 44
	ListDef         rules 45, 46
	Arg             rules 47, 48, 49, 50
	ListArg         rules 51, 52, 53
	Stm             rules 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64
	ListStm         rules 65, 66
	Declaration     rules 67, 68
	Contd           rules 69, 70
	Exp1            rules 71, 72
	Exp2            rules 73, 74, 75, 76, 77
	Exp3            rules 78, 79
	Exp4            rules 80, 81
	Exp8            rules 82, 83, 84
	Exp9            rules 85, 86, 87, 88, 89
	Exp10           rules 90, 91, 92
	Exp11           rules 93, 94, 95
	Exp12           rules 96, 97, 98, 99
	Exp13           rules 100, 101, 102, 103, 104, 105
	Exp14           rules 106, 107, 108, 109, 110, 111, 112
	Exp15           rules 113, 114, 115, 116, 117, 118, 119, 120, 121
	Exp             rule  122
	Exp5            rule  123
	Exp6            rule  124
	Exp7            rule  125
	ListExp         rules 126, 127, 128
	QConst          rule  129
	Elmt            rules 130, 131
	Type            rules 132, 133, 134, 135, 136, 137, 138
	ListId          rules 139, 140
	ListType        rules 141, 142
	ListString      rules 143, 144
	ListElmt        rules 145, 146

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'bool'         reduce using rule 45
	'char'         reduce using rule 45
	'double'       reduce using rule 45
	'int'          reduce using rule 45
	'typedef'      reduce using rule 45
	'using'        reduce using rule 45
	'void'         reduce using rule 45
	L_Id           reduce using rule 45
	%eof           reduce using rule 45

	Program        goto state 134
	ListDef        goto state 135

State 1


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'typedef'      shift, and enter state 132
	'using'        shift, and enter state 133
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 38

	Id             goto state 35
	Def            goto state 130
	QConst         goto state 42
	Elmt           goto state 36
	Type           goto state 131
	ListElmt       goto state 45

State 2


	'bool'         reduce using rule 45
	'char'         reduce using rule 45
	'double'       reduce using rule 45
	'int'          reduce using rule 45
	'typedef'      reduce using rule 45
	'using'        reduce using rule 45
	'void'         reduce using rule 45
	L_Id           reduce using rule 45
	%eof           reduce using rule 45

	ListDef        goto state 129

State 3


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 127
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 38

	Id             goto state 35
	Arg            goto state 128
	QConst         goto state 42
	Elmt           goto state 36
	Type           goto state 126
	ListElmt       goto state 45

State 4


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 127
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 38
	%eof           reduce using rule 51

	Id             goto state 35
	Arg            goto state 124
	ListArg        goto state 125
	QConst         goto state 42
	Elmt           goto state 36
	Type           goto state 126
	ListElmt       goto state 45

State 5


	'!'            shift, and enter state 79
	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'++'           shift, and enter state 82
	'-'            shift, and enter state 83
	'--'           shift, and enter state 84
	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 111
	'do'           shift, and enter state 117
	'double'       shift, and enter state 48
	'false'        shift, and enter state 85
	'for'          shift, and enter state 118
	'if'           shift, and enter state 119
	'int'          shift, and enter state 49
	'return'       shift, and enter state 120
	'throw'        shift, and enter state 86
	'true'         shift, and enter state 87
	'typedef'      shift, and enter state 121
	'void'         shift, and enter state 50
	'while'        shift, and enter state 122
	'{'            shift, and enter state 123
	L_charac       shift, and enter state 34
	L_integ        shift, and enter state 88
	L_doubl        shift, and enter state 89
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 38

	Char           goto state 56
	Integer        goto state 57
	Double         goto state 58
	String         goto state 39
	Id             goto state 35
	Stm            goto state 113
	Declaration    goto state 114
	Exp1           goto state 59
	Exp2           goto state 60
	Exp3           goto state 61
	Exp4           goto state 62
	Exp8           goto state 63
	Exp9           goto state 64
	Exp10          goto state 65
	Exp11          goto state 66
	Exp12          goto state 67
	Exp13          goto state 68
	Exp14          goto state 69
	Exp15          goto state 70
	Exp            goto state 115
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	QConst         goto state 76
	Elmt           goto state 36
	Type           goto state 116
	ListString     goto state 78
	ListElmt       goto state 45

State 6


	'!'            reduce using rule 65
	'('            reduce using rule 65
	'*'            reduce using rule 65
	'++'           reduce using rule 65
	'-'            reduce using rule 65
	'--'           reduce using rule 65
	'bool'         reduce using rule 65
	'char'         reduce using rule 65
	'const'        reduce using rule 65
	'do'           reduce using rule 65
	'double'       reduce using rule 65
	'false'        reduce using rule 65
	'for'          reduce using rule 65
	'if'           reduce using rule 65
	'int'          reduce using rule 65
	'return'       reduce using rule 65
	'throw'        reduce using rule 65
	'true'         reduce using rule 65
	'typedef'      reduce using rule 65
	'void'         reduce using rule 65
	'while'        reduce using rule 65
	'{'            reduce using rule 65
	L_charac       reduce using rule 65
	L_integ        reduce using rule 65
	L_doubl        reduce using rule 65
	L_quoted       reduce using rule 65
	L_Id           reduce using rule 65
	%eof           reduce using rule 65

	ListStm        goto state 112

State 7


	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'const'        shift, and enter state 111
	'double'       shift, and enter state 48
	'int'          shift, and enter state 49
	'void'         shift, and enter state 50
	L_Id           shift, and enter state 38

	Id             goto state 35
	Declaration    goto state 109
	QConst         goto state 42
	Elmt           goto state 36
	Type           goto state 110
	ListElmt       goto state 45

State 8


	'else'         shift, and enter state 108
	%eof           reduce using rule 70

	Contd          goto state 107

State 9


	'!'            shift, and enter state 79
	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'++'           shift, and enter state 82
	'-'            shift, and enter state 83
	'--'           shift, and enter state 84
	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'false'        shift, and enter state 85
	'int'          shift, and enter state 49
	'throw'        shift, and enter state 86
	'true'         shift, and enter state 87
	'void'         shift, and enter state 50
	L_charac       shift, and enter state 34
	L_integ        shift, and enter state 88
	L_doubl        shift, and enter state 89
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 38

	Char           goto state 56
	Integer        goto state 57
	Double         goto state 58
	String         goto state 39
	Id             goto state 35
	Exp1           goto state 105
	Exp2           goto state 60
	Exp3           goto state 61
	Exp4           goto state 62
	Exp8           goto state 63
	Exp9           goto state 64
	Exp10          goto state 65
	Exp11          goto state 66
	Exp12          goto state 67
	Exp13          goto state 68
	Exp14          goto state 69
	Exp15          goto state 70
	Exp            goto state 106
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	QConst         goto state 76
	Elmt           goto state 36
	Type           goto state 77
	ListString     goto state 78
	ListElmt       goto state 45

State 10


	'!'            shift, and enter state 79
	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'++'           shift, and enter state 82
	'-'            shift, and enter state 83
	'--'           shift, and enter state 84
	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'false'        shift, and enter state 85
	'int'          shift, and enter state 49
	'throw'        shift, and enter state 86
	'true'         shift, and enter state 87
	'void'         shift, and enter state 50
	L_charac       shift, and enter state 34
	L_integ        shift, and enter state 88
	L_doubl        shift, and enter state 89
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 38

	Char           goto state 56
	Integer        goto state 57
	Double         goto state 58
	String         goto state 39
	Id             goto state 35
	Exp2           goto state 104
	Exp3           goto state 61
	Exp4           goto state 62
	Exp8           goto state 63
	Exp9           goto state 64
	Exp10          goto state 65
	Exp11          goto state 66
	Exp12          goto state 67
	Exp13          goto state 68
	Exp14          goto state 69
	Exp15          goto state 70
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	QConst         goto state 76
	Elmt           goto state 36
	Type           goto state 77
	ListString     goto state 78
	ListElmt       goto state 45

State 11


	'!'            shift, and enter state 79
	'('            shift, and enter state 80
	'*'            shift, and enter state 81
	'++'           shift, and enter state 82
	'-'            shift, and enter state 83
	'--'           shift, and enter state 84
	'bool'         shift, and enter state 46
	'char'         shift, and enter state 47
	'double'       shift, and enter state 48
	'false'        shift, and enter state 85
	'int'          shift, and enter state 49
	'true'         shift, and enter state 87
	'void'         shift, and enter state 50
	L_charac       shift, and enter state 34
	L_integ        shift, and enter state 88
	L_doubl        shift, and enter state 89
	L_quoted       shift, and enter state 41
	L_Id           shift, and enter state 38

	Char           goto state 56
	Integer        goto state 57
	Double         goto state 58
	String         goto state 39
	Id             goto state 35
	Exp3           goto state 103
	Exp4           goto state 62
	Exp8           goto state 63
	Exp9           goto state 64
	Exp10          goto state 65
	Exp11          goto state 66
	Exp12          goto state 67
	Exp13          goto state 68
	Exp14          goto state 69
	Exp15          goto state 70
	Exp5           goto state 72
	Exp6           goto state 73
	Exp7           goto state 74
	QConst         goto state 76
	Elmt           goto state 36
	Type           goto state 77
	ListString     goto state 78
	ListElmt       goto state 45

State 12

